syntax = "proto3";
package proto.user.v1;

import "proto/user/v1/user.proto";

option go_package = "gitlab.avakatan.ir/boilerplates/go-boiler/gen/go/;userpb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  User user = 1;
}